--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
   },
   "dependencies": {
+    "@nextui-org/accordion": "^2.0.38",
+    "@nextui-org/avatar": "^2.0.32",
     "@nextui-org/button": "^2.0.37",
     "@nextui-org/card": "^2.0.33",
     "@nextui-org/code": "2.0.32",
@@ -18,11 +20,16 @@
     "@nextui-org/link": "2.0.34",
     "@nextui-org/listbox": "2.1.25",
     "@nextui-org/navbar": "2.0.36",
+    "@nextui-org/progress": "^2.0.33",
+    "@nextui-org/slider": "^2.2.15",
     "@nextui-org/snippet": "2.0.41",
     "@nextui-org/switch": "2.0.33",
     "@nextui-org/system": "2.2.5",
+    "@nextui-org/table": "^2.0.39",
+    "@nextui-org/tabs": "^2.0.35",
     "@nextui-org/theme": "2.2.9",
     "@react-aria/visually-hidden": "3.8.12",
+    "antd": "^5.19.3",
     "clsx": "2.1.1",
     "framer-motion": "~11.1.1",
     "intl-messageformat": "^10.5.0",
@@ -48,8 +55,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^3.2.0",
     "postcss": "8.4.38",
+    "prettier": "^3.3.3",
     "tailwind-variants": "0.1.20",
     "tailwindcss": "3.4.3",
-    "typescript": "5.5.4"
+    "typescript": "5.4.5"
   }
 }
