--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
   },
   "dependencies": {
+    "@mysten/dapp-kit": "^0.14.15",
+    "@mysten/sui.js": "^0.54.1",
     "@nextui-org/accordion": "^2.0.38",
     "@nextui-org/avatar": "^2.0.32",
     "@nextui-org/button": "^2.0.37",
@@ -19,6 +21,7 @@
     "@nextui-org/kbd": "2.0.33",
     "@nextui-org/link": "2.0.34",
     "@nextui-org/listbox": "2.1.25",
+    "@nextui-org/modal": "^2.0.39",
     "@nextui-org/navbar": "2.0.36",
     "@nextui-org/progress": "^2.0.33",
     "@nextui-org/slider": "^2.2.15",
@@ -29,6 +32,7 @@
     "@nextui-org/tabs": "^2.0.35",
     "@nextui-org/theme": "2.2.9",
     "@react-aria/visually-hidden": "3.8.12",
+    "@tanstack/react-query": "^5.51.23",
     "antd": "^5.19.3",
     "clsx": "2.1.1",
     "framer-motion": "~11.1.1",
